dix: add server url